--- a/presentations/apsa2017/apsa2017urge.tex
+++ b/presentations/apsa2017/apsa2017urge.tex
@@ -329,9 +329,9 @@ Key result (spatial model): \\standard consideration only when president and com
 
 \bi
 \item Original dataset of bill histories 1998--2014
-\item Many missing records before 1998 
-\item Covers 3+ presidencies, variance in president's status\\ 
-(coalition unity, Carey 2002, Alemán\&Saiegh 2007)
+%\item Many missing records before 1998 
+%\item Covers 3+ presidencies, variance in president's status\\ 
+%(coalition unity, Carey 2002, Alemán\&Saiegh 2007)
 \ei
 
 \pause
@@ -401,7 +401,7 @@ as \% declared urgent    &    \emph{48}  &   \emph{75}  &  \emph{68} \\ \hline
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \frame {                      % SLIDE
 
-    \frametitle{Predicted probability}
+    \frametitle{Predicted probability that bill is urgent}
 
     \begin{center}
       \includegraphics[width=\columnwidth]{../../graphs/predictedPr.pdf} \\
@@ -414,7 +414,7 @@ as \% declared urgent    &    \emph{48}  &   \emph{75}  &  \emph{68} \\ \hline
 \bi
 \item Urgency authority = closed rule
 \item Unlike Rules Committee, Chilean prez controls this
-\item Evidence for prediction on president--chair preference similarity
+\item Evidence that president--chair preference similarity $\rightarrow$ surge
 \item More tests:
   \be
   \item Use nominate scores instead of partisan dummies
@@ -426,7 +426,7 @@ as \% declared urgent    &    \emph{48}  &   \emph{75}  &  \emph{68} \\ \hline
   %% \item Which exec.\ proposals not urgent? 
   %% \item How do member proposals become urgent? Vote trading?
   %% \ee
-\item Ideas welcome
+\item Comments and critiques welcome
 \ei
 
 \pause
