Post itam presentation of urge10 with exec bill only and camara uregncies only

--- a/escrito/urge10.tex
+++ b/escrito/urge10.tex
@@ -81,6 +81,40 @@
 %Por lo demás, me parece un excelente artículo y me muero de ganas de ver el libro.
 %Abrazo. E.  
 
+% Adriana Alfaro
+% En Chile se llama urgencia, en Mx iniciativa preferente. Cómo se llama en Colombia etc? La lectira semántica quizás sesgó la interpretación de Morgenstern y cia. 
+
+% Adrián: falta un resumen delpaper, predicciones, estrategia empirica etc en intro, más instrumento de colaboración. Qué hacce el paper?
+% No Moe&Howell, sólo que es análogo al fast track de tratados internacionales
+%
+%% Hola Eric,
+%
+%% Muy bueno el paper. Me parece que la colaboración presidente-comités es muy interesante, y además de ver qué proyectos son declarados urgentes, el modelo probablemente tiene otras implicaciones que pueden desarrollar después.
+%
+%% Como te dije, acá te mando un par de comentarios adicionales:
+%
+%% 1. No estoy seguro si el comienzo de la sección 2 (pp. 4-6) es el mejor lugar para discutir la data y los tipos de proyectos de urgencia. Tal vez sería mejor comenzar con el ejemplo y el modelo (más algunos ejemplos de la vida real) y recién al ir al caso de Chile discutir los datos y los distintos tipos de urgencia.
+%
+%% 2. Una cosa que no me quedó 100% clara, y se podría aclarar: ¿lo de los distintos tipos de proyectos de urgencia está en la Constitución, o en los estatutos del Congreso?
+%
+%% 3. En la presentación mencionaste distintos tipos de quórum para distintos tipos de proyectos. En la medida en que sea fácil determinar qué tipo de quórum amerita cada proyecto, se podría partir la muestra para ver si los resultados son similares cuando se requiere quórum simple o una mayoría especial, etc.
+%
+%% 4. Casi todas las variables son dummies entre 0 y 1. La variable Year remaining varía entre 0 y 100, ¿por qué no dividirla por 100 para que quede en la misma escala que el resto?
+%
+%% Por último, algunas posibles extensiones que tal vez sea mejor discutir en otros trabajos, pero podrían mencionar en la conclusión:
+%
+%% 5. No me quedó clara la diferencia entre poder de urgencia y poderes de decreto, especialmente cuando hay aprobación automática (e.g., Uruguay). Pero si el presidente puede legislar por decreto, ¿el pleno no tiene que elegir entre el decreto tal como está, o introducirle algo? O sea, ¿el decreto no funciona también como una closed rule? No lo digo por el caso chileno, pero sí para pensar cómo comparar con otros países.
+%
+%% 6. ¿El modelo genera algún otro tipo de predicciones? Ustedes están mirando declaración de urgencia, ¿pero es posible predecir qué proyectos deberían morir en el comité, cuáles deberían ser aprobados por el pleno, cuáles recibir enmiendas, etc? Si no es posible predecirlo (o no tienen los datos para evaluar las predicciones), deberían explicar por qué en el paper. Se me hace que muchos reviewers les van a salir con eso.
+
+% Otros comentarios de la charla en el itam
+% 1. Jeff: In US, committee reports original bill and amendments separately, each voted. In Mexico, committee reports its own version. Is it the same in Chile? EMM: Yes, methinks. FEE: Look at original executive proposals and what the committee reports, to see how much change there was.
+%
+% 2. FEE/Adrián: analize exv bills urgent since the beginning vs those declared urgent later. Should hint at how resttrictive rules become necessary as exv makes concessions in original bill...
+%
+% 3. Vidal: discuss why the institution is so much used and has survived so long. Also: why aren't all exv bills urgent? (R: if comm introduced changes, P may want floor to ``correct'' them.
+%
+% 4. FEE: Senate, where opp sometimes controlled, seem more attractive as a test. 
 
 \onehalfspacing
 
